--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -502,6 +502,13 @@
                     }
 
                 }
+                .business-label {
+                    color: white;
+                    background-color: $hairfie;
+                    font-size: 1.6em;
+                    padding: 5px;
+                    margin-right: 5px;
+                }
             }
 
         }
