--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -429,6 +429,10 @@
                 padding: 15px;
                 height: 250px;
                 cursor:pointer;
+                &:hover {
+                    @include box-shadow(0px 4px 5px 0px $grey);
+                    @include transition (all 0.5s ease-out);
+                }
                 @media screen and (max-width: $screen-xs-max) {
                     padding: 16px 10px;
                     height: 156px;
