footer links center

--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -45,18 +45,17 @@ footer {
 	.footer-links {
 		list-style-type: none;
 		margin: 0 auto;padding: 0;
+		text-align: center;
 		@include nofloat;
 		li {
-			padding-left: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 			display: inline-block;
 			width: auto;
 			text-wrap: no-wrap;
 			font-family: $font-second;
 			font-size: 1em;
 			letter-spacing: .5px;
-			&:first-child {
-				padding-left: 30px;
-			}
 		}
 		li:last-child {
 			position: relative;
