--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10463,17 +10463,17 @@ footer {
     list-style-type: none;
     margin: 0 auto;
     padding: 0;
+    text-align: center;
     float: none !important; }
     footer .footer-links li {
-      padding-left: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
       display: inline-block;
       width: auto;
       text-wrap: no-wrap;
       font-family: "Lato", sans-serif;
       font-size: 1em;
       letter-spacing: .5px; }
-      footer .footer-links li:first-child {
-        padding-left: 30px; }
     footer .footer-links li:last-child {
       position: relative;
       height: 2.2em; }
