--- a/public/scss/partials/_select.scss
+++ b/public/scss/partials/_select.scss
@@ -172,7 +172,7 @@
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
   margin-top: -1px;
-  height: 400px;
+  //height: 400px;
   position: absolute;
   top: 100%;
   width: 100%;
