--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -124,6 +124,48 @@
         margin-bottom: 35px;
     }
 }
+
+section.how {
+    height: 100px;
+    h2 {
+        padding-top: 24px;
+        padding-bottom: 0;
+    }
+    object {
+        display: inline-block;
+    }
+    .row > div {
+        margin-bottom: 0;
+        img {
+            width: 100px;height: 100px;
+            display: block;
+            margin: 0 auto 40px;
+        }
+        h3 {
+            font-family: $font-main;
+            font-weight: $regular;
+            color: $darkgrey;
+            text-transform: uppercase;
+            font-size: 1.6em;
+            display: inline-block;
+            margin: 0;
+        }
+        .how-txt {
+            height: 100px;
+            float: left;
+            width: calc(100% - 40px);
+            padding: 25px 5px 25px 10px;
+        }
+        p {
+            font-weight: $light;
+            color: $darkgrey;
+            font-size: 1.4em;
+            line-height: 1.2em;
+            letter-spacing: 1px;
+        }
+    }
+}
+
 section.home-section {
     @media screen and (min-width: $screen-sm-min) {
         margin: 0 15px;
@@ -222,6 +264,9 @@ section.home-section {
             margin-left: -5px;
         }
         
+    }
+    &.searchbar input {
+        color: black;
     }
     .input-group-addon {
         border-radius: 0;
@@ -736,37 +781,4 @@ section.home-search {
         &:hover {color: $font-color;}
     }
 
-}
-section.home-footer {
-    .row > div {
-        margin-bottom:60px;
-        text-align: center;
-        img {
-            width: 100px;height: 100px;
-            display: block;
-            margin: 0 auto 40px;
-        }
-        h3 {
-            font-family: $font-main;
-            font-weight: $semiBold;
-            color: #FE5B5F;
-            text-transform: uppercase;
-            font-size: 3em;
-        }
-        p {
-            font-weight: $light;
-            color: $darkgrey;
-            font-size: 1.4em;
-            line-height: 1.2em;
-            letter-spacing: 1px;
-            width: 78%;
-            margin: 10px auto;
-        }
-    }
-}
-
-section.how {
-    .row > div {
-        margin-bottom: 0;
-    }
 }
