--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -458,30 +458,40 @@ header {
 					left: 20px;
 					content: " ";
 				}
-				&:nth-child(2) {
+				&:nth-child(1) {
+					//input {
+						border-top: 1px solid #e6e6e6;
+					//}
+				}
+				&.where {
 					padding: 0;
 					&:before {
 						background: url(../img/icons/localisation.svg) no-repeat center center;
-						background-size: contain;
+						background-size: contain; 
+					}
+					input {
+						border: none;
 					}
 				}
-				&:nth-child(3) {
+				&.name {
 					padding: 0;
 					&:before {
 						background: url(../img/icons/users.svg) no-repeat center center;
 						background-size: contain;
 					}
 				}
+				border-bottom: 1px solid #e6e6e6;
+
 			}
 			input {
 				padding-left: 50px;
 				width: 100%;
 				height: 65px;
 				margin-bottom: 20px;
-				border-bottom: 1px solid #e6e6e6;
+				//border-bottom: 1px solid #e6e6e6;
 				border-left: none;
 				border-right: none;
-				border-top: none; 
+				border-top: none;
 			}
 			.btn-red {
 				height: 65px;
@@ -503,7 +513,7 @@ header {
 					width: 60px;
 					background-size: 40%;
 					border: none;
-				    border-bottom: 1px solid #e6e6e6;
+				    //border-bottom: 1px solid #e6e6e6;
 					border-left: 1px solid #e6e6e6;
 				}
 			}
@@ -519,7 +529,7 @@ header {
 					padding-left: 50px;
 					background-color: white;
 					height: 65px;
-					border: 1px solid #e6e6e6;
+					border: none;
 					border-left: none;
 					border-right: none;
 					font-family: "Lato", sans-serif;
