--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -264,7 +264,7 @@
                 }
 
                 @media screen and (min-width: $screen-xs-max) {
-                    float: right;
+                    //float: right;
                 }
                 @media screen and (max-width: $screen-xs-max) {
                     width: 100%;
@@ -475,9 +475,70 @@
                 height: 220px;
                 width: calc(100% - 240px);
                 margin-left: 20px;
+                .business-name > h3 {
+                    font-size: 2.1em;
+                    margin: 0 0 3px;
+                    letter-spacing: 2px;
+                    color: $darkgrey;
+                    text-transform: uppercase;
+                    font-weight: $semiBold;
+                }
+                .business-address {
+                    font-size: 1.4em;
+                    letter-spacing: 1px;
+                }
+                .business-price-rating {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    p {
+                        font-size: 1.8em;
+                    }
+                }
+                .business-reviews {
+                    div {
+                        display: inline;                        
+                    }
+                    > a > span {
+                        line-height: 27px;
+                        font-size: 1.4em;
+                        color: $darkgrey;
+                    }
+                }
+                .business-label {
+                    color: white;
+                    background-color: $hairfie;
+                    font-size: 1.6em;
+                    padding: 5px;
+                    margin-right: 5px;
+                    margin-top: 5px;
+                    display: inline-block;
+                }
                 .book {
                     bottom: 0px;
                     position: absolute;
+                }
+                .btn-hairfies {
+                    @extend .btn;
+                    //width: calc(50% - 5px);
+                    border-radius: 0;
+                    height: 39px;
+                    background-color: white;
+                    border: 1px solid $grey5;
+                    color: $grey3;
+                    font-weight: $regular;
+                    font-size: 1.9em;
+                    border-radius: 4px;
+                    margin-left: 10px;
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    font-weight: $regular;
+                    padding: 6px 12px;
+                    &:hover {
+                        @include transition(.25s ease-in-out);
+                        color: white;
+                        background-color: $hairfie;
+                    }
                 }
                 @media screen and (max-width: $screen-xs-max) {
                     height: 124px;
@@ -504,14 +565,39 @@
                             //top: -5px;
                         }
                     }
-
-                }
-                .business-label {
-                    color: white;
-                    background-color: $hairfie;
-                    font-size: 1.6em;
-                    padding: 5px;
-                    margin-right: 5px;
+                    .business-name > h3 {
+                        font-size: 2.2em;
+                        text-transform: none;
+                        letter-spacing: 0;
+                        font-weight: $regular;
+                        margin-bottom: 0;
+                    }
+                    .business-address {
+                        font-size: 1.8em;
+                        letter-spacing: 0;
+                        font-weight: $light;
+                        line-height: 12px;
+                        margin-bottom: 5px;
+                        color: $grey;
+                    }
+                    .business-reviews {
+                        margin-bottom: 5px;
+                        .star.min {
+                            background-size: 95%;
+                        }
+                        .star {
+                            height: 16px;
+                            width: 16px;
+                        }
+                        > a > span {
+                            line-height: 16px;
+                            font-size: 1.8em;
+                            color: $darkgrey;
+                        }
+                    }
+                    .business-price-rating {
+                        position: initial;
+                    }
                 }
             }
 
