--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -45,7 +45,7 @@ header {
 		letter-spacing: .5px;
 	}
 	a.menu-search {
-		background: url(../img/icons/search.svg) no-repeat center center;
+		background: url(../img/icons/mobile-menu/search.svg) no-repeat center center;
 		background-size: 90%;
 
 		margin-top: 15px;
@@ -56,25 +56,25 @@ header {
 		height: 28px;
 		margin-right: 15px;
 		&.close {
-			background: url(../img/icons/cross.svg) no-repeat center center;
-			background-size: 90%;
+			background: url(../img/icons/mobile-menu/cross.svg) no-repeat center center;
+			background-size: 80%;
 			opacity: 1;
 		}
 	}
 	a.menu-trigger {
-		background: url(../img/icons/mobile-menu.svg) no-repeat center center;
+		background: url(../img/icons/mobile-menu/mobile-menu.svg) no-repeat center center;
 		background-size: 90%;
 
 		margin-top: 15px;
 		@media screen and (max-width: $screen-xs-max) {
 			margin-top: 19px;
 		}
-		width: 35px;
+		width: 25px;
 		height: 25px;
 		//margin-right: 15px;
 		&.close {
 			background: url(../img/icons/cross.svg) no-repeat center center;
-			background-size: 90%;
+			background-size: 80%;
 			opacity: 1;
 		}
 	}
@@ -303,6 +303,10 @@ header {
 			background-size: 100%;
 			margin-top: 12px;
 		}
+
+		.menu-button {
+			padding: 0;
+		}
 	}
 	.mobile-menu {
 		background-color: white;
@@ -383,7 +387,7 @@ header {
 	        			}
 					}
 					&.search-nav {
-						&:before {
+						&:before { 
 	        				background: url(../img/icons/search-nav-white.svg) no-repeat center center;
 	        				background-size: contain;
 	        			}
@@ -432,7 +436,7 @@ header {
 			overflow-x: auto;
 		h2 {
 			width: 75%;
-			margin: 40px auto;
+			margin: 35px auto;
 			font-family: $font-second;
 			font-weight: $latoBold;
 			font-size: 1.9em;
@@ -448,14 +452,35 @@ header {
 			}
 			float: none;
 			margin: 0 auto;
+			input, select {
+				font-weight: $regular;
+				font-family: $font-second;
+				font-size: 1.4em;
+				//color: #c4c4c4;
+				color: $darkgrey;
+				@include placeholder($grey);
+				letter-spacing: 0;
+				option.is-disabled {
+					color: $grey;
+				}
+			}
 			div {
 				&:before {
 					z-index: 1;
 				    position: absolute;
-				    width: 23px;
-				    height: 23px;
-				    top: 20px;
-					left: 20px;
+				    width: 18px;
+				    height: 18px;
+				    top: 23px;
+					left: 15px;
+					content: " ";
+				}
+				&:after {
+					z-index: 1;
+				    position: absolute;
+				    width: 18px;
+				    height: 18px;
+				    top: 23px;
+					right: 23px;
 					content: " ";
 				}
 				&:nth-child(1) {
@@ -479,15 +504,19 @@ header {
 						background: url(../img/icons/users.svg) no-repeat center center;
 						background-size: contain;
 					}
+					margin-bottom: 20px;
+					border: none;
 				}
 				border-bottom: 1px solid #e6e6e6;
-
+				&.action {
+					border: none;
+				}
 			}
 			input {
 				padding-left: 50px;
 				width: 100%;
 				height: 65px;
-				margin-bottom: 20px;
+				
 				//border-bottom: 1px solid #e6e6e6;
 				border-left: none;
 				border-right: none;
@@ -500,7 +529,7 @@ header {
 				font-size: 1.6em;
 				text-transform: uppercase;
 			}
-			div.input-group {
+			.where.input-group {
 				float: left;
 				input {
 					width: 100%;
@@ -511,7 +540,7 @@ header {
 					background: url(../img/icon-location.png) no-repeat center center;
 					background-color: white;
 					width: 60px;
-					background-size: 40%;
+					background-size: 35%;
 					border: none;
 				    //border-bottom: 1px solid #e6e6e6;
 					border-left: 1px solid #e6e6e6;
@@ -519,24 +548,29 @@ header {
 			}
 			.mobile-categories {
 				&:before {
-					background: url(../img/icons/search-nav.svg) no-repeat center center;
+					background: url(../img/icons/mobile-menu/categories.svg) no-repeat center center;
+					background-size: contain;
+				}
+				&:after {
+					background: url(../img/icons/mobile-menu/arrow-down.svg) no-repeat center center;
 					background-size: contain;
 				}
 				padding: 0;
+				background-color: white;
 				select {
 					@include appearance(none);
 					width: 100%;
 					padding-left: 50px;
-					background-color: white;
+					z-index: 2;
+					background: transparent;
 					height: 65px;
 					border: none;
 					border-left: none;
 					border-right: none;
-					font-family: "Lato", sans-serif;
-					font-weight: 700;
-					font-size: 1.4em;
-					letter-spacing: 2px;
-					color: #c4c4c4;
+					// font-family: "Lato", sans-serif;
+					// font-size: 1.4em;
+					// letter-spacing: 2px;
+					// color: #c4c4c4;
 				}
 			}
 		}
