--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -232,6 +232,9 @@ section.home-section {
         letter-spacing: 3px;
         padding: 30px 0 10px;
         margin: 0;
+        @media screen and (max-width: $screen-xs-max) {
+            font-size: 2.2em;
+        }
         font-size: 2.4em;
         color: $darkgrey;
     }
