--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11739,37 +11739,6 @@ section.home-search .home-search-mobile {
         margin-right: 10px; }
       #content.search .main-content .tab-pane section .inline-promo span.black {
         margin-left: 3px; }
-    #content.search .main-content .tab-pane section div.address-bloc .main-infos {
-      width: calc(100% - 120px);
-      float: left; }
-      @media screen and (max-width: 767px) {
-        #content.search .main-content .tab-pane section div.address-bloc .main-infos {
-          width: 100%; } }
-    #content.search .main-content .tab-pane section div.address-bloc h3 {
-      font-size: 2.1em;
-      margin: 0 0 3px; }
-    #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
-      font-size: 1.4em;
-      margin-top: 3px; }
-    #content.search .main-content .tab-pane section div.address-bloc div {
-      padding: 0; }
-    @media screen and (max-width: 767px) {
-      #content.search .main-content .tab-pane section div.address-bloc a {
-        letter-spacing: 0px;
-        padding-left: 0px;
-        padding-right: 0px;
-        font-size: 1em;
-        font-weight: 400;
-        text-transform: none; }
-      #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
-        font-size: 1.6em; }
-        #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2):not(.pull-right) {
-          line-height: 10px; } }
-    @media screen and (max-width: 374px) {
-      #content.search .main-content .tab-pane section div.address-bloc a {
-        font-size: 0.8em; }
-      #content.search .main-content .tab-pane section div.address-bloc a:nth-child(2) {
-        font-size: 1.2em; } }
     #content.search .main-content .tab-pane section .btn-red, #content.search .main-content .tab-pane section .btn-book {
       text-transform: uppercase;
       letter-spacing: 1px;
@@ -11895,6 +11864,10 @@ section.home-search .home-search-mobile {
       line-height: 27px;
       font-size: 1.4em;
       color: #595959; }
+    #content.search .main-content .tab-pane#salons .info-bloc .business-reviews img, #content.search .main-content .tab-pane#adom .info-bloc .business-reviews img {
+      width: 120px;
+      margin: 0;
+      display: inline; }
     #content.search .main-content .tab-pane#salons .info-bloc .business-label, #content.search .main-content .tab-pane#adom .info-bloc .business-label {
       color: white;
       background-color: #fe5b5f;
@@ -11963,6 +11936,8 @@ section.home-search .home-search-mobile {
           color: #c4c4c4; }
         #content.search .main-content .tab-pane#salons .info-bloc .business-reviews, #content.search .main-content .tab-pane#adom .info-bloc .business-reviews {
           margin-bottom: 5px; }
+          #content.search .main-content .tab-pane#salons .info-bloc .business-reviews img, #content.search .main-content .tab-pane#adom .info-bloc .business-reviews img {
+            width: 80px; }
           #content.search .main-content .tab-pane#salons .info-bloc .business-reviews .star.min, #content.search .main-content .tab-pane#adom .info-bloc .business-reviews .star.min {
             background-size: 95%; }
           #content.search .main-content .tab-pane#salons .info-bloc .business-reviews .star, #content.search .main-content .tab-pane#adom .info-bloc .business-reviews .star {
