--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11857,7 +11857,9 @@ section.home-search .home-search-mobile {
   @media screen and (max-width: 767px) {
     #content.search .sidebar {
       padding-top: 0;
-      z-index: 149; } }
+      z-index: 149;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch; } }
   #content.search .sidebar .filter-recap h2 {
     line-height: 50px; }
   #content.search .sidebar .checkbox-inline + .checkbox-inline {
