--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -545,6 +545,8 @@
         @media screen and (max-width: $screen-xs-max) {
             padding-top: 0;
             z-index: 149;
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch;
         }
 
         .filter-recap {
@@ -681,6 +683,11 @@
             overflow-x: hidden;
             width: 100%;
             top: 100%;
+
+            // &.open {
+            //     overflow-y: scroll;
+            //     -webkit-overflow-scrolling: touch;
+            // }
         }
     }
 }
