--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8821,6 +8821,23 @@ figcaption a.address {
   padding: 10px;
   top: 57px; }
 
+.loading-container {
+  width: 100%;
+  height: 100%;
+  min-height: 100px;
+  max-height: 200px; }
+  .loading-container span {
+    display: block;
+    min-height: 100px;
+    text-align: center; }
+  .loading-container .loading {
+    background: url(../img/loader_128.png) no-repeat center center;
+    background-size: 64px 64px;
+    -webkit-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    -moz-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    -o-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    animation: spinX 1.5s infinite cubic-bezier(0.3, 0.01, 0.58, 1); }
+
 .loading {
   width: 100%;
   height: 100%;
@@ -10014,6 +10031,9 @@ div.pagination {
     margin-left: -90px; }
     div.pagination ul li {
       padding: 0; }
+      @media screen and (max-width: 767px) {
+        div.pagination ul li {
+          width: 35px; } }
   div.pagination a {
     padding: .15em .55em;
     color: #595959;
@@ -12357,12 +12377,13 @@ section.home-search .home-search-mobile {
         margin-bottom: 3px; }
       .salon#content section.salon-content section h3 {
         margin-left: -15px; }
-      .salon#content section.salon-content section .row {
-        border-left-style: solid;
-        border-color: #f0f0f1;
-        border-width: 5px;
-        padding-left: 15px;
-        margin-right: 0; }
+      @media screen and (min-width: 767px) {
+        .salon#content section.salon-content section .row {
+          border-left-style: solid;
+          border-color: #f0f0f1;
+          border-width: 5px;
+          padding-left: 15px;
+          margin-right: 0; } }
       .salon#content section.salon-content section:nth-child(4) h4 {
         text-transform: uppercase;
         letter-spacing: 2px; }
@@ -12816,6 +12837,9 @@ section.home-search .home-search-mobile {
           top: 23%;
           width: 100%;
           text-align: center; }
+          @media (max-width: 767px) {
+            .hairfie-singleView .single-view #carousel-hairfie .pricetag .price {
+              font-size: 20px; } }
       .hairfie-singleView .single-view #carousel-hairfie .indice-control {
         width: 100%;
         position: absolute;
