--- a/public/scss/_temp.scss
+++ b/public/scss/_temp.scss
@@ -64,16 +64,35 @@ figcaption a.address {
   top: 57px;
 }
 
+.loading-container {
+    width: 100%; height: 100%;
+    min-height: 100px;
+    max-height: 200px;
+  span {
+    display: block;
+    min-height: 100px;
+    text-align: center;
+  }
+  .loading {
+      background:url(../img/loader_128.png) no-repeat center center;
+      background-size: 64px 64px;
+      -webkit-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+      -moz-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+      -o-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+      animation: spinX 1.5s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+  }
+}
+
 .loading {
-  width: 100%; height: 100%;
-  min-height: 100px;
-  max-height: 200px;
-  background:url(../img/loader_128.png) no-repeat center center;
-  background-size: 64px 64px;
-  -webkit-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
-  -moz-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
-  -o-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
-  animation: spinX 1.5s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    width: 100%; height: 100%;
+    min-height: 100px;
+    max-height: 200px;
+    background:url(../img/loader_128.png) no-repeat center center;
+    background-size: 64px 64px;
+    -webkit-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    -moz-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    -o-animation: spinX 2s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
+    animation: spinX 1.5s infinite cubic-bezier(0.3, 0.01, 0.58, 1);
 }
 
 @-webkit-keyframes spinX {
