--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -477,11 +477,13 @@
 				margin-left: -15px;
 			}
 			.row {
-				border-left-style: solid;
-				border-color: $bg2;
-				border-width: 5px;
-				padding-left: 15px;
-				margin-right: 0;
+				@media screen and (min-width: $screen-xs-max) {
+					border-left-style: solid;
+					border-color: $bg2;
+					border-width: 5px;
+					padding-left: 15px;
+					margin-right: 0;
+				}
 			}
 			&:nth-child(4) {
 				h4 {
